Redirect download to the Releases page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="list-group download">
                     <p class="list-group-item list-group-item-title">Get it</p>
-                    <p class="list-group-item"><a class="btn btn-block btn-primary" href="iPoPS.dmg">Download now</a></p>
+                    <p class="list-group-item"><a class="btn btn-block btn-primary" href="https://github.com/julianxhokaxhiu/iPoPS/releases">Download now</a></p>
                 </div>
                 <p class="text-right hidden-xs">Julian Xhokaxhiu, 2009-<span id="credits-year">present</span></p>
             </div>
