--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-sm-12">
-                                <h1>iPoPS <span class="text-info">1.2.2</span></h1>
+                                <h1>iPoPS</h1>
                                 <h2 class="text-muted">Convert your PSX Discs and ISOs into the PBP format, and play them on your PSP</h2>
                             </div>
                         </div>
@@ -126,96 +126,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="panel-group" id="accordion">
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#v122">
-                          Version 1.2.2 <sup><span class="label label-danger">NEW</span></sup>
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="v122" class="panel-collapse collapse in">
-                      <div class="panel-body">
-                        <ul>
-                            <li>Fixed an error that occours when it try to create an image of the CD when the drive is busy. Thanks to _Em of MacScene for the tip!</li>
-                            <li>Fixed some error strings</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#v121">
-                          Version 1.2.1
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="v121" class="panel-collapse collapse">
-                      <div class="panel-body">
-                        <ul>
-                            <li>Fixed some bugs on detecting CD Type. Now it handle all PSX CD Types</li>
-                            <li>Managed some errors (with detailed messagges)</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#v12">
-                          Version 1.2
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="v12" class="panel-collapse collapse">
-                      <div class="panel-body">
-                        <ul>
-                            <li>Added the support for IMG and BIN disk images</li>
-                            <li>Added the support for JPG, BMP and GIF images (when you select an icon or background picture)</li>
-                            <li>Some minor aesthetic changes (to fit the support for new disk image and pictures)</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#v11">
-                          Version 1.1
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="v11" class="panel-collapse collapse">
-                      <div class="panel-body">
-                        <ul>
-                            <li>Added the ability to compress the resulting EBOOT from 0 to 9</li>
-                            <li>Fixed a bug that cannot permit to set the Title and the Game ID assigned into the Window</li>
-                            <li>Fixed a bug that didn't resize the images from Icon0 and Background1 pictures to the original aspect form</li>
-                            <li>Now it fully works on PPC systems (you have to compile it by yourself sorry)</li>
-                            <li>Optimized the code of the conversion (that did not permit also to be recompiled on Mac OS X Snow Leopard)</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#v10">
-                          Version 1.0
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="v10" class="panel-collapse collapse">
-                      <div class="panel-body">
-                        <ul>
-                            <li>First initial relase.</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
                 </div>
             </div>
         </div>
